# 202510_NLO_measurement

./: .gitignore  comparison_utils.py  fitting_results.py  main.py  measure_shg.py  measurement_metadata.py  power_measurement.py  pyproject.toml  shg_analysis.py  test_communication.ipynb  test_fitting.ipynb  windows_dialogs.py
app_data/: beam_profile_catalog.json  nd_filter_catalog.json  sample_catalog.json
data_maintenance/: add_filter_and_boxcar_metadata.ipynb  filter_boxcar_metadata_tool.py  rewrite_thickness.py
devices/: boxcar_control.py  crylasQlaser_control.py  gsc02_control.py  ophir-3A_powermeter_control.py  osms2035_control.py  osms60yaw_control.py  polarization_control.py  polarizer_calibration.py  power_meter_control.py  stage_control.py  thorlabs_s120c_powermeter_control.py
fitting_strategies/: base.py  bechthold1977.py  braun1997.py  dou1989.py  ishidate1974.py  jerphagnon1970.py  shoji1997.py
results/: mock_result_generator.py
test_codes/: BMF_PM.ipynb  BMF_coherence_length_vs_wavelength.ipynb  BMF_peak_thickness.ipynb  BMF_walkoff.ipynb  test_bechthold.ipynb  test_braun1997.ipynb  test_communication.ipynb  test_d_calc_from_power.ipynb  test_fitting.ipynb  test_polarization.ipynb  test_signal_linearity.ipynb  test_theory.ipynb  test_theory_comparison.ipynb  test_wedge_fitting.ipynb
widgets/: analysis_widget.py  boxcar_widget.py  calibration_widget.py  comparison_widget.py  crylasQlaser_widget.py  data_management_widget.py  elliptec_rotator_widget.py  filter_management_widget.py  gsc02_stage_widget.py  manual_extrema_detection_widget.py  (+8 more)
(+10 files in other folders)
