[project]
name = "shg-measure-app-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crystaldatabase",
    "elliptec",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.6",
    "optosigma",
    "pandas>=2.3.3",
    "pyqt6>=6.9.1",
    "pyserial>=3.5",
    "pyvisa>=1.15.0",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
]

[tool.uv.sources]
elliptec = { git = "https://github.com/roesel/elliptec" }
optosigma = { git = "https://github.com/elerac/optosigma" }
crystaldatabase = { git = "https://github.com/ui-kurodai/202508_crystal_database" }
